tests/example_policies/all-captured-tests/other-captured-tests-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-kube-system2
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capture-all-egress-kube-system-dummy-to-ignore
  namespace: kube-system-dummy-to-ignore
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capture-all-egress-default
  namespace: default
spec:
  podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capture-all-egress-vendor-system
  namespace: vendor-system
spec:
  podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
